# mondrian

./: .gitignore  DESCRIPTION  README.md  audrey.R
R/: mondrian.R
docs/: jira-sdd-integration.md
mondrian-mcp/: .env  README.md  pyproject.toml  server.py
mondrian-mcp/mondrian/: __init__.py  compose.py  placements.py
mondrian-mcp/tests/: test_compose.py  test_placements.py  test_server.py
openspec/changes/archive/2026-06-29-mondrian-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-29-mondrian-mcp-server/specs/art-generator/: spec.md
openspec/changes/archive/2026-06-29-mondrian-mcp-server/specs/mcp-server/: spec.md
openspec/changes/archive/2026-06-30-fix-border-line-weight/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-fix-border-line-weight/specs/art-generator/: spec.md
openspec/changes/archive/2026-06-30-freeform-dimensions/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-freeform-dimensions/specs/mcp-server/: spec.md
openspec/changes/archive/2026-06-30-freeform-dimensions/specs/placements/: spec.md
openspec/changes/archive/2026-06-30-image-content-response/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-image-content-response/specs/mcp-server/: spec.md
openspec/changes/archive/2026-06-30-remove-black-fill/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-remove-black-fill/specs/art-generator/: spec.md
openspec/specs/art-generator/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/placements/: spec.md
