[project]
name = "mondrian-mcp"
version = "0.1.0"
description = "Mondrian-style generative art MCP server for presentation decoration"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.2.0",
    "cairosvg>=2.7.0",
]

[project.scripts]
mondrian-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mondrian"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pillow>=10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
